commit social connect api
