# app/Models/SocialConnect.php
@@ -9,10 +9,7 @@ use Illuminate\Database\Eloquent\SoftDeletes;
 class SocialConnect extends Model
 {
     use HasFactory;
-
-
     use SoftDeletes;
-
     protected $table = 'social_connect';
 
     protected $fillable = [
@@ -23,5 +20,24 @@ class SocialConnect extends Model
 
 
     protected $hidden = ['created_at', 'updated_at', 'deleted_at'];
+    
+    public function getSocialConnect($search=null){
+        try{
+            
+            $social_connect_list = static::select('id','name','logo');
+            
+            //take 20 results based from the table
+            $social_connect_list = $social_connect_list->take(20)->get();
+            //check if there are any results
+            if(!$social_connect_list->isEmpty()){
+                return $social_connect_list;
+            }
+ 
+            return false;
+        }
+        catch (\Exception $e){
+            return false;
+        }
+    }
 
 }
